--- a/.github/workflows/update_promocodes.yml
+++ b/.github/workflows/update_promocodes.yml
@@ -30,3 +30,13 @@ jobs:
           git add promocodes.json
           git commit -m "Обновление списка промокодов" || echo "No changes to commit"
           git push
+      - name: Commit and push changes
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+            git config --global user.email "github-actions[bot]@users.noreply.github.com"
+            git config --global user.name "GitHub Actions"
+            git add promocodes.json
+            git commit -m "Обновление списка промокодов" || exit 0
+            git push origin HEAD:main
+        
