--- a/.github/workflows/update_promocodes.yml
+++ b/.github/workflows/update_promocodes.yml
@@ -27,8 +27,8 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-            git config --global user.email "github-actions[bot]@users.noreply.github.com"
-            git config --global user.name "GitHub Actions"
+            git config --global user.email "Ammite@users.noreply.github.com"
+            git config --global user.name "Ammite"
             git add promocodes.json
             git commit -m "Обновление списка промокодов" || exit 0
             git push origin HEAD:main
