--- a/.github/workflows/update_promocodes.yml
+++ b/.github/workflows/update_promocodes.yml
@@ -30,8 +30,8 @@ jobs:
             git config --global user.email "Ammite@users.noreply.github.com"
             git config --global user.name "Ammite"
 
-            git pull --rebase https://$PAT@github.com/Ammite/hsr_websites.git main
-            
+            git pull --rebase --autostash https://$PAT@github.com/Ammite/hsr_websites.git main
+
             git add promocodes.json
             git commit -m "Обновление списка промокодов" || exit 0
             git push origin HEAD:main
